--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Your are drawing CHEWBACCA</string>
-    <string name="app_name">CanvasTest</string>
+    <string name="app_name">Draw Geo</string>
 
 </resources>
