--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="app_name">Draw Geo</string>
     <string name="storeTitle">Store</string>
     <string name="piggies">120</string>
+    <string name="coinName">Piggies</string>
+    <string name="challenges_done">25</string>
+    <string name="challenges_created">10</string>
+    <string name="challenges_guessed">1</string>
+    <string name="user_name">User</string>
 
 </resources>
